frontend/test/should_pass/retype_016.grg
using attrib_model_001;

rule r {
	-x:Edge->;
	
	optional {
		modify {
			-y:EINT<x>->;
		}
	}
	
	modify {}
}
