frontend/test/should_fail/retype_021.grg
using attrib_model_001;

rule r {
	-x:Edge->;

	alternative {
		First {
			modify {
				-y:EINT<x>->;
			}
		}
		Second {
			modify {}
		}
	}

	modify {
		-y:ESTRING<x>->;
	}
}
